<resources>
    <string name="app_name">Sports Universe</string>
    <string name="sports_universe">Sports Universe</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="exercise">Weight Lifting Exercises</string>
    <string name="cardio">Cardio Exercises</string>
    <string name="nutrition">Nutrition Plans</string>
    <string name="stopwatch">Timer</string>
    <string name="bmi">Body Mass Index Test</string>
    <string name="legs">Legs</string>
    <string name="abs">Abs</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="shoulder">Shoulder</string>
    <string name="arms">Arms</string>
    <string name="video">CLICK TO PLAY VIDEO TUTORIAL</string>
    <string name="bulk">Bulk diet</string>
    <string name="cal">Calorie Counter</string>
    <string name="lean">7 Day lean diet plan</string>

</resources>