<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="143dp"
            android:text="@string/legs"
            android:background="@drawable/legsn"
            android:id="@+id/legs_button"
            android:textColor="#00000000" />

        <Button

            android:layout_width="fill_parent"
            android:layout_height="143dp"
            android:text="@string/abs"
            android:id="@+id/abs_button"
            android:background="@drawable/absn"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/legs_button"
            android:textColor="#00000000" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="143dp"
            android:text="@string/chest"
            android:id="@+id/chest_button"
            android:background="@drawable/chestn"
            android:textColor="#00000000"
            android:layout_below="@+id/abs_button"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="143dp"
            android:text="@string/back"
            android:id="@+id/back_button"
            android:background="@drawable/backn"
            android:layout_below="@+id/chest_button"
            android:textColor="#00000000" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="143dp"
            android:text="@string/shoulder"
            android:id="@+id/shoulders_button"
            android:background="@drawable/shouldersn"
            android:layout_below="@+id/back_button"
            android:textColor="#00000000" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="143dp"
            android:text="@string/arms"
            android:id="@+id/arms_button"
            android:background="@drawable/armsn"
            android:layout_below="@+id/shoulders_button"
            android:textColor="#00000000" />
    </RelativeLayout>
</ScrollView>